Version 1.105 (?? February 02)
- Shorten DS_Container::Free_elt so that TDS_2 can use it.
- New insert(Point, Locate_type, Cell_handle, int, int).

Version 1.104 (5 February 02)
- Various internal cleanups.

Version 1.103 (25 January 02)
- Update wrt recent changes in the kernel and TDS_2.

Version 1.102 (22 January 02)
- Doc : update Tds_3 => TriangulationDataStructure_3.
- Use STL_extension's Triple and Quadruple.

Version 1.101 (14 January 02)
- Documentation updates.
- remove_from_simplex() renamed to remove_from_maximal_dimension_simplex().
- star_hole() renamed to insert_in_hole().
- Use STL_extensions' Filter_iterator<> instead of
  Triangulation_finite_iterators_3<>.

Version 1.100 (17 December 01)
- Missing typenames for GCC 3.1.

Version 1.99 (12 December 01)
- Use MP_Float instead of Gmpz (gmp 4.0 produces warnings with SunPro...).
- VC++ doesn't like NULL as default argument.

Version 1.98 (25 November 01)
- Conflict_tester classes made friend for SunPro.

Version 1.97 (31 October 01)
- Fix example_tds.C.

Version 1.96 (26 October 01)
- TDS::insert*() doesn't support the first Vertex_handle superfluous argument.
- Document this change, as well as remove_decrease_dimension(),
  remove_from_simplex(), reorient().

Version 1.95 (5 October 01)
- TDS::Face_circulator in 2D.
- Delaunay remove now uses a proper algorithm in 2D.

Version 1.94 (1 October 01)
- New functions : degree(v), _reorient(), remove_decrease_dimension(),
  remove_from_simplex().
- Some functions work better in more dimensions : test_dim_down(),
  incident_vertices().
- TDS::Edge/Facet iterators now support operator->().
- T_3::Vertex_iterator -> All_vertices_iterator and similar.
- Point_iterator.
- Natural_neighbors_3 friend of Delaunay_3.

Version 1.93 (27 September 01)
- Use CGAL/iterator.h.
- New function TDS::create_face() to prepare for the merge TDS_2/TDS_3.
- BCC doesn't have a working std::unique_copy, so change incident_vertices().

Version 1.92 (25 September 01)