@@ -1,5 +1,6 @@
 Version 1.105 (?? February 02)
 - Shorten DS_Container::Free_elt so that TDS_2 can use it.
+- Add a copy of DS_Container that preserves the iterator order.
 - New insert(Point, Locate_type, Cell_handle, int, int).
 
 Version 1.104 (5 February 02)
